@@ -66,6 +66,7 @@ Misc:
  - Qt: Clear active buttons when focus is lost
  - GBA Memory: Simplify memory API and use fixed bus width
  - GBA Video: Start video at the last scanline instead of the first
+ - Debugger: Watchpoints now work on STM/LDM instructions
 
 0.1.0: (2014-12-13)
  - Initial release
